﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version 2.4.0 (v2.4.0 RTM) 2013-12-08

	General description:
		The big new feature in this minor release is ther addition of a diagnostic API, which allows querying 
		the container for diagnostic information. Since version 2.0, Simple Injector has allowed developers to
		show diagnostic information while debugging. The new diagnostic API allows developers to request this 
		information programmatically. This allows writing integration tests that verify the correctness of the 
		container's configuration.

		Besides this, there are lots of small improvements and bug fixes in the core library, such as the 
		addition of the abstract ScopedLifestyle base class; the capability to resolve collections as 
		IReadOnlyCollection<T> and IReadOnlyList<T>, and the possibility to register partial open generic 
		types.

	New features:
		-[Core] Lifestyle.CreateProducer extension methods added to make creating InstanceProducer instances
		 more convenient. (work item 19959).
		-[Core/LifetimeScoping/Web/Wcf] An ScopedLifestyle abstraction is added and the scoped lifestyles for
		 lifetime scoping web and WCF. This allows the container registration to be oblivious to the actual
		 scoped lifestyle implementation. The ScopedLifestyle class adds an WhenScopeEnds an 
		 RegisterForDisposal method that users can interact with. (work item 19969)
		-[Core] New Lifestyle.CreateHybrid method overload added that accepts two ScopedLifestyle instances
		 and returns a hybrid ScopeLifestyle. (work item 19969)
		-[Core] RegisterAll(Type, params Registration[]) overload added to make registring collections using
		 Registration instances more convenient. (work item 20001)
		-[Core] New convenient Lifestyle.CreateRegistration overloads added that allow supplying a single 
		 TConcrete type instead of TService and TImplementation.